kubernetes/jellyseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: jellyseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
      - name: jellyseerr
        image: docker.io/fallenbagel/jellyseerr:latest
        ports:
        - containerPort: 5055
          name: http
        volumeMounts:
        - mountPath: /app/config
          name: config-volume
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: http
        #   initialDelaySeconds: 180
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: http
        #   initialDelaySeconds: 90
        #   periodSeconds: 5
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: jellyseerr-pvc
