kubernetes/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr-service
  namespace: jellyseerr
spec:
  selector:
    app: jellyseerr
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5055
