kubernetes/jellyseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr-ingress
  namespace: jellyseerr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/hostname: jellyseerr.homelab.jonasg.be
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  tls:
  - hosts:
    - jellyseerr.homelab.jonasg.be
    secretName: jellyseerr-tls
  rules:
  - host: jellyseerr.homelab.jonasg.be
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jellyseerr-service
            port:
              number: 80
